--- a/index.html
+++ b/index.html
@@ -315,16 +315,16 @@
       <img class="notificacion__icon" src="./Assets/check.svg" alt="" />
     </article>
 
-  <article>
-    <section>
-      <img src="" alt="">
-      <p></p>
-    </section>
-  </article>
+    <article>
+      <section>
+        <img src="" alt="" />
+        <p></p>
+      </section>
+    </article>
     <footer>
       <div class="footer">
         <h3>Onepace</h3>
-        <p>Pagina de muestra integrador Nucba. Octubre 2022. Spagnolo Jesus.</p>
+        <p>Pagina de muestra integrador Nucba. 2023. Spagnolo Jesus.</p>
         <div>
           <a href="https://www.facebook.com/jeesu.spagnolo"
             ><i class="bx bxl-facebook-circle"></i
